Setup bootstrap and jquery

--- a/merrill/views/index.jade
+++ b/merrill/views/index.jade
@@ -1,5 +1,15 @@
 extends layout
 
 block content
-  div.container
-  h1 You Found Me!  
+  div.container-fluid
+    div.navbar.navbar-fixed-top
+      div.navbar-inner
+        a.brand ReCharge Health
+        ul.nav
+          li.active 
+            a(href='#') Home
+          li 
+            a(href='#') Register
+          li
+            a(href='#') Login
+    
