--- a/merrill/views/layout.jade
+++ b/merrill/views/layout.jade
@@ -1,6 +1,9 @@
 doctype 5
 html
   head
-    title My My
+    title ReCharge Health
+    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css')
+    script(type='text/javascript', src='/js/jquery-1.10.2.min.js')
+    script(type='text/javascript', src='/js/bootstrap.min.js')
   body
     block content
