Added login routes

--- a/merrill/public/css/style.css
+++ b/merrill/public/css/style.css
@@ -1,5 +1,30 @@
 @media (min-width: 980px) {
+		html {
+				height: 100%;
+		}
 		body {
 				padding-top: 60px;
+				height: 100%;
+		}
+		#wrap {
+				min-height: 100%;
+		}
+		#main {
+				overflow:auto;
+				padding-bottom: 150px; /* this needs to be larger than footer height */
+		}
+		.register-button {
+				padding-top: 10px;
+				padding-bottom: 10px;
+		}
+		.footer {
+				position: relative;
+				margin-top: -150px; /* negative value of footer height */
+				height: 150px;
+				clear: both;
+				padding-top: 20px;
+		}
+		p.copyright {
+				text-align: center;
 		}
 }
