--- a/merrill/views/login.jade
+++ b/merrill/views/login.jade
@@ -14,7 +14,11 @@ block content
             a(href='/login') Login
     div
       form(method='post', action'')
-        label(for='username') Username:
-        input(type='text', name='username')
-        label(for='password') Password:
-        input(type='text', name='password')
+        p
+          label(for='username') Username:
+          input(type='text', name='username')
+        p
+          label(for='password') Password:
+          input(type='password', name='password')
+        p
+          input(type='submit', value = 'Login')
