--- a/merrill/views/layout.jade
+++ b/merrill/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     title ReCharge Health
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css')
+    link(rel='stylesheet', href='/css/style.css')
     script(type='text/javascript', src='/js/jquery-1.10.2.min.js')
     script(type='text/javascript', src='/js/bootstrap.min.js')
   body
